atualizando back end

--- a/package.json
+++ b/package.json
@@ -1,18 +1,16 @@
 {
-  "name": "ds-tecnologia-backend",
+  "name": "ds-tecnologia",
   "version": "1.0.0",
-  "description": "Backend para o site Tecnologia DS",
-  "main": "server.js",
-  "type": "module",
+  "description": "",
+  "main": "serve.js",
   "scripts": {
     "start": "node server.js"
   },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
   "dependencies": {
-    "express": "^4.19.2",
-    "mercadopago": "^2.0.10",
-    "cors": "^2.8.5"
-  },
-  "engines": {
-    "node": "18.x"
+    "express": "^5.1.0",
+    "mercadopago": "^2.8.0"
   }
 }
